resolve overlapping issue on upload page.

--- a/public/css/new/media.css
+++ b/public/css/new/media.css
@@ -60,7 +60,7 @@
         position: fixed;
         left: -100%;
         top: 0;
-        z-index: 1;
+        z-index: 2;
         height: 100vh;
     }
 
